Update setenv.sh